--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"final-form": "^4.18.5",
 		"lodash": "^4.17.15",
 		"markdown-to-jsx": "^6.10.3",
+		"material-ui": "^0.20.2",
 		"mercadopago": "^1.1.0",
 		"mui-places-autocomplete": "^2.0.0",
 		"react": "^16.9.0",
