--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "npm": "8.3.1",
-    "node": "16.16.4"
+    "node": "v16.14.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.4.0",
@@ -15,7 +15,6 @@
     "markdown-to-jsx": "^6.10.3",
     "material-ui": "^0.20.2",
     "mercadopago": "^1.1.0",
-    "mui-places-autocomplete": "^2.0.0",
     "react": "^16.9.0",
     "react-credit-cards": "^0.8.0",
     "react-dom": "^16.9.0",
