--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "boite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alangio.github.io/boite",
   "engines": {
     "npm": "8.3.1",
     "node": "v16.14.0"
@@ -10,6 +11,7 @@
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "classnames": "^2.2.6",
+    "eslint": "^6.1.0",
     "final-form": "^4.18.5",
     "lodash": "^4.17.15",
     "markdown-to-jsx": "^6.10.3",
@@ -28,10 +30,11 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.60.0",
     "styled-components": "^4.4.0",
-    "typeface-roboto": "0.0.75",
-    "eslint": "^6.1.0"
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
